Make some minior changes in scripts (refacoring and code cleaning)

--- a/Scripts/Boilerplate/UI_Config.json
+++ b/Scripts/Boilerplate/UI_Config.json
@@ -1,42 +1,43 @@
 {
     "output_file": "Settings/settings.json",
+
     "Command": {
-      "type": "textbox",
-      "value": "!ping",
-      "label": "Command",
-      "tooltip": "The command that will be responded to.",
-      "group": "Core"
+        "type": "textbox",
+        "value": "!ping",
+        "label": "Command",
+        "tooltip": "The command that will be responded to.",
+        "group": "Setup"
     },
     "Permission": {
-      "type": "dropdown",
-      "value": "everyone",
-      "items": ["everyone","moderator","subscriber","user_specific","editor"],
-      "label": "Permission",
-      "tooltip": "Who is able to use the command",
-      "group": "Core"
+        "type": "dropdown",
+        "value": "everyone",
+        "items": ["everyone", "moderator", "subscriber", "user_specific", "editor"],
+        "label": "Permission",
+        "tooltip": "Who is able to use the command.",
+        "group": "Setup"
     },
     "Info": {
         "type": "textbox",
         "value": "",
         "label": "Info",
         "tooltip": "This field should only be filled when using the user_specific permission.",
-        "group": "Core"
-      },
+        "group": "Setup"
+    },
     "Cooldown": {
-      "type": "slider",
-      "value": 4,
-      "min": 1,
-      "max": 100,
-      "ticks": 1,
-      "label": "Cooldown (seconds)",
-      "tooltip": "How long the command should go on cooldown for",
-      "group": "Core"
+        "type": "slider",
+        "value": 4,
+        "min": 1,
+        "max": 100,
+        "ticks": 1,
+        "label": "Cooldown (seconds)",
+        "tooltip": "How long the command should go on cooldown for.",
+        "group": "Setup"
     },
     "Response": {
         "type": "textbox",
         "value": "Pong!",
         "label": "Command",
         "tooltip": "The message that will be sent to chat when using the command.",
-        "group": "Core"
-      }
-  }
+        "group": "Setup"
+    }
+}
