--- a/Scripts/Boilerplate/UI_Config.json
+++ b/Scripts/Boilerplate/UI_Config.json
@@ -8,21 +8,6 @@
         "tooltip": "The command that will be responded to.",
         "group": "Setup"
     },
-    "Permission": {
-        "type": "dropdown",
-        "value": "everyone",
-        "items": ["everyone", "moderator", "subscriber", "user_specific", "editor"],
-        "label": "Permission",
-        "tooltip": "Who is able to use the command.",
-        "group": "Setup"
-    },
-    "Info": {
-        "type": "textbox",
-        "value": "",
-        "label": "Info",
-        "tooltip": "This field should only be filled when using the user_specific permission.",
-        "group": "Setup"
-    },
     "Cooldown": {
         "type": "slider",
         "value": 4,
@@ -39,5 +24,28 @@
         "label": "Command",
         "tooltip": "The message that will be sent to chat when using the command.",
         "group": "Setup"
+    },
+
+    "Permission": {
+        "type": "dropdown",
+        "value": "everyone",
+        "items": ["everyone", "moderator", "subscriber", "user_specific", "editor"],
+        "label": "Permission",
+        "tooltip": "Who is able to use the script commands.",
+        "group": "Permission"
+    },
+    "PermissionDenied": {
+        "type": "textbox",
+        "value": "Permission denied: You have to be a {0} to use this command!",
+        "label": "Permission Denied Message",
+        "tooltip": "Chat message will be sent on failed permission check. 0 — required permission.",
+        "group": "Permission"
+    },
+    "PermissionInfo": {
+        "type": "textbox",
+        "value": "",
+        "label": "Info",
+        "tooltip": "This field should only be filled when using the user_specific permission.",
+        "group": "Permission"
     }
 }
