--- a/Scripts/Score/UI_Config.json
+++ b/Scripts/Score/UI_Config.json
@@ -1,7 +1,7 @@
 {
     "output_file": "Settings/settings.json",
 
-    "command_get_score": {
+    "CommandGetScore": {
         "type": "textbox",
         "value": "!score",
         "label": "Get Command",
@@ -29,19 +29,35 @@
         "tooltip": "The command to reset current score.",
         "group": "Setup"
     },
-    "Permission": {
+
+    "PermissionOnGet": {
+        "type": "dropdown",
+        "value": "everyone",
+        "items": ["everyone", "moderator", "subscriber", "user_specific", "editor"],
+        "label": "Permission On Get Command",
+        "tooltip": "Who is able to use the script command to get score.",
+        "group": "Permission"
+    },
+    "PermissionOnEdit": {
         "type": "dropdown",
         "value": "moderator",
         "items": ["everyone", "moderator", "subscriber", "user_specific", "editor"],
-        "label": "Permission",
-        "tooltip": "Who is able to use the command.",
-        "group": "Setup"
+        "label": "Permission On New/Update/Reset Commands",
+        "tooltip": "Who is able to use the script commands to create/update/reset score.",
+        "group": "Permission"
+    },
+    "PermissionDenied": {
+        "type": "textbox",
+        "value": "Permission denied: You have to be a {0} to use this command!",
+        "label": "Permission Denied Message",
+        "tooltip": "Chat message will be sent on failed permission check. 0 — required permission.",
+        "group": "Permission"
     },
     "PermissionInfo": {
         "type": "textbox",
         "value": "",
         "label": "Info",
         "tooltip": "This field should only be filled when using the user_specific permission.",
-        "group": "Setup"
+        "group": "Permission"
     }
 }
