--- a/Scripts/Score/UI_Config.json
+++ b/Scripts/Score/UI_Config.json
@@ -29,11 +29,11 @@
         "tooltip": "The command to reset current score.",
         "group": "Setup"
     },
-    "CommandReloadScore": {
+    "CommandDeleteScore": {
         "type": "textbox",
-        "value": "!reload_score",
-        "label": "Reload Command (Not implemented)",
-        "tooltip": "The command to reload current score from local file. (Not implemented)",
+        "value": "!delete_score",
+        "label": "Remove Command",
+        "tooltip": "The command to delete current score.",
         "group": "Setup"
     },
 
@@ -143,6 +143,20 @@
         "value": "Reset score: {0}",
         "label": "Reset Score Message",
         "tooltip": "Chat message will be sent when score has been reset (using Reset Score command). 0 — reset score.",
+        "group": "Chat Messages"
+    },
+    "NothingToDeleteMessage": {
+        "type": "textbox",
+        "value": "No score found, nothing to delete.",
+        "label": "Nothing To Delete Message",
+        "tooltip": "Chat message will be sent when score has been reset (using Reset Score command). 0 — reset score.",
+        "group": "Chat Messages"
+    },
+    "DeletedScoreMessage": {
+        "type": "textbox",
+        "value": "Deleted score: {0}",
+        "label": "Deleted Score Message",
+        "tooltip": "Chat message will be sent when score has been deleted (using Delete Score command). 0 — deleted score.",
         "group": "Chat Messages"
     },
 
