--- a/Scripts/Score/UI_Config.json
+++ b/Scripts/Score/UI_Config.json
@@ -112,14 +112,14 @@
     },
     "InvalidPlayerIdMessage": {
         "type": "textbox",
-        "value": "Failed to update score: invalid player ID {0}. Try value in range: {1}",
+        "value": "Failed to update score: invalid player ID {0}. Try value in range: {1}.",
         "label": "Invalid Player ID Message",
         "tooltip": "Chat message will be sent if user calls an Update Score command with invalid player ID. 0 — invalid player ID, 1 — valid value range.",
         "group": "Chat Messages"
     },
     "InvalidScoreValueMessage": {
         "type": "textbox",
-        "value": "Failed to update score: invalid score value {0}. Try value in range: {1}",
+        "value": "Failed to update score: invalid score value {0}. Try value in range: {1}.",
         "label": "Invalid Score Value Message",
         "tooltip": "Chat message will be sent if user calls an Update Score command with invalid score value. 0 — invalid score value, 1 — valid value range.",
         "group": "Chat Messages"
